# ImgSearch

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  dependencies.py  gradio_ui.py  logging_utils.py  main.py  models.py  schemas.py  utils.py
app/services/: image_service.py  model_service.py
app/services/model_backends/: base.py  cloud_stub.py  qwen_local.py
docs/: api.md
