[project]
name = "imgsearch-lost-found"
version = "0.1.0"
description = "Local lost-and-found image search service with FastAPI, Gradio, and Qwen3-VL embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "gradio>=5.23.0",
  "requests>=2.32.0",
  "huggingface_hub>=0.30.0",
  "transformers>=4.51.0",
  "torch>=2.6.0",
  "numpy>=2.2.0",
  "Pillow>=11.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
